crates/ruff_python_parser/tests/snapshots/invalid_syntax@invalid_annotation_yield.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/invalid_annotation_yield.py
---
## AST

```
Module(
    ModModule {
        range: 0..74,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    range: 0..26,
                    name: Name(
                        ExprName {
                            range: 5..6,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 6..20,
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 7..19,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 7..8,
                                        },
                                        bound: Some(
                                            Yield(
                                                ExprYield {
                                                    range: 11..18,
                                                    value: Some(
                                                        NumberLiteral(
                                                            ExprNumberLiteral {
                                                                range: 17..18,
                                                                value: Int(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ),
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            range: 23..26,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    range: 27..45,
                    name: Name(
                        ExprName {
                            range: 32..33,
                            id: Name("Y"),
                            ctx: Store,
                        },
                    ),
                    type_params: None,
                    value: Yield(
                        ExprYield {
                            range: 37..44,
                            value: Some(
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 43..44,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            ),
                        },
                    ),
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    range: 46..73,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 50..51,
                    },
                    type_params: Some(
                        TypeParams {
                            range: 51..54,
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 52..53,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 52..53,
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    parameters: Parameters {
                        range: 54..68,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 55..67,
                                parameter: Parameter {
                                    range: 55..67,
                                    name: Identifier {
                                        id: Name("x"),
                                        range: 55..56,
                                    },
                                    annotation: Some(
                                        Yield(
                                            ExprYield {
                                                range: 59..66,
                                                value: Some(
                                                    NumberLiteral(
                                                        ExprNumberLiteral {
                                                            range: 65..66,
                                                            value: Int(
                                                                1,
                                                            ),
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                    ),
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 70..73,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 70..73,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | type X[T: (yield 1)] = int
2 | type Y = (yield 1)
3 | def f[T](x: (yield 1)): ...
  |              ^^^^^^^ Syntax Error: yield expression cannot be used in a type annotation
  |
